# weather

./: Cargo.toml  README.md
src/: forecast.rs  main.rs
