[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
reqwest = {version = "0.11.14", features=["json"]}
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
structopt = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }

[profile.release]
opt-level = 'z'
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
overflow-checks = true

